--- a/src/components/Brand/styles.css
+++ b/src/components/Brand/styles.css
@@ -18,7 +18,7 @@
   font-family: font-family-headline;
   background: color-brand-grey;
 
-  & .typo {
+  & .Words {
     font-weight: 500;
     color: color-brand-highlight;
 
@@ -27,7 +27,7 @@
     }
   }
 
-  & .suffix {
+  & .Suffix {
     text-align: 'center';
     color: color-brand-white;
   }
@@ -39,33 +39,33 @@
   }
 }
 
-.SizeLarge {
-  & .typo {
+.SizeL {
+  & .Words {
     font-size: font-size-xlarge;
   }
 
-  & .suffix {
+  & .Suffix {
     font-size: font-size-large
   }
 }
 
-.SizeSmall {
-  & .typo {
+.SizeS {
+  & .Words {
     font-size: font-size-medium;
   }
 
-  & .suffix {
+  & .Suffix {
     font-size: font-size-medium
   }
 }
 
 @media only screen and (max-width: device-tablet) {
-  .SizeLarge {
-    & .typo {
+  .SizeL {
+    & .Words {
       font-size: font-size-large;
     }
 
-    & .suffix {
+    & .Suffix {
       font-size: font-size-medium
     }
   }
