Add CSS linting.

--- a/src/components/Brand/styles.css
+++ b/src/components/Brand/styles.css
@@ -57,7 +57,7 @@
     }
 
     & .Suffix {
-      font-size: var(--font-size-medium
-    )}
+      font-size: var(--font-size-medium);
+    }
   }
 }
