--- a/src/variables.css
+++ b/src/variables.css
@@ -42,6 +42,7 @@
   --icon-size-medium: 24px;
   --icon-size-large: 48px;
   --icon-size-xlarge: 64px;
+  --sidebar-width: 96px;
 
   /* Z-Index */
   --zindex-content: 100;
