--- a/src/components/View/styles.css
+++ b/src/components/View/styles.css
@@ -22,7 +22,6 @@
   height: 100%;
   display: flex;
   flex-direction: row;
-  overflow: hidden;
   align-items: center;
   justify-content: center;
 }
@@ -32,7 +31,6 @@
   height: 100%;
   display: flex;
   flex-direction: row;
-  overflow: hidden;
 }
 
 .OrientationVertical {
@@ -40,7 +38,6 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
 }
 
 .AlignItemsCenter {
@@ -49,4 +46,12 @@
 
 .JustifyContentCenter {
   justify-content: center;
+}
+
+.ScrollableNone {
+  overflow: hidden;
+}
+
+.ScrollableAuto {
+  overflow: auto;
 }
