--- a/src/components/Icon/styles.css
+++ b/src/components/Icon/styles.css
@@ -1,13 +1,4 @@
-@value (
-  color-brand-grey,
-  color-brand-highlight,
-  icon-size-large,
-  icon-size-medium,
-  icon-size-small,
-  icon-size-xlarge,
-  icon-size-xsmall
-) from '../../theme.css';
-
+@import '../../variables.css';
 
 .Icon {
   @nest a & {
@@ -16,36 +7,40 @@
 }
 
 .ColorDefault {
-  fill: color-brand-grey;
+  fill: var(--color-brand-grey);
 }
 
 .ColorHighlight {
-  fill: color-brand-highlight;
+  fill: var(--color-brand-highlight);
+}
+
+.ColorWhite {
+  fill: var(--color-brand-white);
 }
 
 .SizeXS {
-  width: icon-size-xsmall;
-  height: icon-size-xsmall;
+  width: var(--icon-size-xsmall);
+  height: var(--icon-size-xsmall);
 }
 
 .SizeS {
-  width: icon-size-small;
-  height: icon-size-small;
+  width: var(--icon-size-small);
+  height: var(--icon-size-small);
 }
 
 .SizeM {
-  width: icon-size-medium;
-  height: icon-size-medium;
+  width: var(--icon-size-medium);
+  height: var(--icon-size-medium);
 }
 
 .SizeL {
-  width: icon-size-large;
-  height: icon-size-large;
+  width: var(--icon-size-large);
+  height: var(--icon-size-large);
 }
 
 .SizeXL {
-  width: icon-size-xlarge;
-  height: icon-size-xlarge;
+  width: var(--icon-size-xlarge);
+  height: var(--icon-size-xlarge);
 }
 
 .TypeInline {
