--- a/src/components/Dropdown/styles.css
+++ b/src/components/Dropdown/styles.css
@@ -24,7 +24,7 @@
     color: var(--color-brand-white);
     cursor: pointer;
     outline: none;
-    -webkit-appearance: none;
+    appearance: none;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
